fix: issue with click and expand events firing at same time; style formatting not showing for censored result values in panel chart

--- a/src/components/map/map-legend.module.css
+++ b/src/components/map/map-legend.module.css
@@ -3,8 +3,8 @@
     border: 1px solid #b6b6b6;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     font-size: 0.9em;
-    max-width: 190px;
-    width: 190px;
+    max-width: 200px;
+    width: 200px;
 }
 
 .content {
