--- a/src/components/table/summary-table.module.css
+++ b/src/components/table/summary-table.module.css
@@ -1,3 +1,10 @@
+.buttonWrapper {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+}
+
 .loaderContainer {
     align-items: center;
     display: flex;
